--- a/openfisca_barcelona/tests/benefits/HE-02-01-00.yaml
+++ b/openfisca_barcelona/tests/benefits/HE-02-01-00.yaml
@@ -1,6 +1,37 @@
-- name: Persona amb sou per sobre del maxim NO rep l'ajuda
+- name: Persona amb deute de lloguer i sense 3 rebuts pagats. No rep l'ajuda
   description: Ajuda lloguer persones grans
-  period: 2021-06
+  period: 2021-07
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 700
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      existeix_deute_en_el_pagament_del_lloguer: true
+      ha_pagat_almenys_3_quotes_del_lloguer: false
+      zona_de_lhabitatge: zona_a
+      demarcacio_de_lhabitatge: barcelona_ciutat
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        edat: 65
+        ingressos_bruts:
+          2020: 23788
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: barcelona
+  output:
+    HE_02_01_00: [0]
+
+- name: Persona menor de 65. No rep l'ajuda
+  description: Ajuda lloguer persones grans
+  period: 2021-07
   absolute_error_margin: false
   input:
     familia:
@@ -11,90 +42,7 @@
       es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
       tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
       relacio_de_parentiu_amb_el_propietari: false
-      zona_de_lhabitatge: zona_a
-      demarcacio_de_lhabitatge: barcelona_ciutat
-    familia_fins_a_segon_grau:
-      familiars: [adult]
-    persones:
-      adult:
-        edat: 66
-        ingressos_bruts:
-          2020: 25788
-        temps_empadronat_habitatge_actual: menys_nou_mesos
-        tipus_document_identitat: DNI
-        titular_contracte_de_lloguer: true
-        municipi_empadronament: barcelona
-  output:
-    HE_02_01_00: [0]
-- name: Persona amb lloguer per sobre del maxim NO rep l'ajuda
-  description: Ajuda lloguer persones grans
-  period: 2021-06
-  absolute_error_margin: false
-  input:
-    familia:
-      altres_persones: [adult]
-    unitat_de_convivencia:
-      persones_que_conviuen: [adult]
-      import_del_lloguer: 850
-      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
-      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
-      relacio_de_parentiu_amb_el_propietari: false
-      zona_de_lhabitatge: zona_a
-      demarcacio_de_lhabitatge: barcelona_ciutat
-    familia_fins_a_segon_grau:
-      familiars: [adult]
-    persones:
-      adult:
-        edat: 66
-        ingressos_bruts:
-          2020: 24000
-        temps_empadronat_habitatge_actual: menys_nou_mesos
-        tipus_document_identitat: DNI
-        titular_contracte_de_lloguer: true
-        municipi_empadronament: barcelona
-  output:
-    HE_02_01_00: [0]
-- name: Persona compleix requeriments rep l'ajuda
-  description: Ajuda lloguer persones grans
-  period: 2021-06
-  absolute_error_margin: false
-  input:
-    familia:
-      altres_persones: [adult]
-    unitat_de_convivencia:
-      persones_que_conviuen: [adult]
-      import_del_lloguer: 550
-      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
-      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
-      relacio_de_parentiu_amb_el_propietari: false
-      zona_de_lhabitatge: zona_a
-      demarcacio_de_lhabitatge: barcelona_ciutat
-    familia_fins_a_segon_grau:
-      familiars: [adult]
-    persones:
-      adult:
-        edat: 66
-        ingressos_bruts:
-          2020: 24000
-        temps_empadronat_habitatge_actual: menys_nou_mesos
-        tipus_document_identitat: DNI
-        titular_contracte_de_lloguer: true
-        municipi_empadronament: barcelona
-  output:
-    HE_02_01_00: [1]
-- name: Persona amb edat inferior al minim NO rep l'ajuda
-  description: Ajuda lloguer persones grans
-  period: 2021-06
-  absolute_error_margin: false
-  input:
-    familia:
-      altres_persones: [adult]
-    unitat_de_convivencia:
-      persones_que_conviuen: [adult]
-      import_del_lloguer: 550
-      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
-      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
-      relacio_de_parentiu_amb_el_propietari: false
+      existeix_deute_en_el_pagament_del_lloguer: false
       zona_de_lhabitatge: zona_a
       demarcacio_de_lhabitatge: barcelona_ciutat
     familia_fins_a_segon_grau:
@@ -103,68 +51,325 @@
       adult:
         edat: 64
         ingressos_bruts:
-          2020: 24000
+          2020: 23788
         temps_empadronat_habitatge_actual: menys_nou_mesos
         tipus_document_identitat: DNI
         titular_contracte_de_lloguer: true
         municipi_empadronament: barcelona
   output:
     HE_02_01_00: [0]
-- name: Familia amb alguna persona amb discapacitat i amb tots els requeriments de HE-02-01-00 rep l'ajuda
-  description: Ajuda lloguer just
-  period: 2021-06
+
+- name: Persona no titular del contracte on viu. NO rep l'ajuda
+  description: Ajuda lloguer persones grans
+  period: 2021-07
   absolute_error_margin: false
   input:
     familia:
-      sustentadors_i_custodia: [adult, adult2]
-      menors: [menor, menor2, menor3]
+      altres_persones: [adult]
     unitat_de_convivencia:
-      persones_que_conviuen: [adult, adult2, menor, menor2, menor3]
-      import_del_lloguer: 850
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 500
       es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
       tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
       relacio_de_parentiu_amb_el_propietari: false
+      existeix_deute_en_el_pagament_del_lloguer: false
       zona_de_lhabitatge: zona_a
       demarcacio_de_lhabitatge: barcelona_ciutat
     familia_fins_a_segon_grau:
-      familiars: [adult, adult2, menor, menor2, menor3]
+      familiars: [adult]
     persones:
       adult:
         edat: 66
         ingressos_bruts:
-          2020: 6348
+          2020: 23788
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: false
+        municipi_empadronament: barcelona
+  output:
+    HE_02_01_00: [0]
+
+- name: Persona amb parentiu amb la propietat on viu. NO rep l'ajuda
+  description: Ajuda lloguer persones grans
+  period: 2021-07
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 500
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: true
+      existeix_deute_en_el_pagament_del_lloguer: false
+      zona_de_lhabitatge: zona_a
+      demarcacio_de_lhabitatge: barcelona_ciutat
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        edat: 66
+        ingressos_bruts:
+          2020: 23788
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: barcelona
+  output:
+    HE_02_01_00: [0]
+
+
+- name: Persona resident fora de barcelona ciutat. No rep l'ajuda
+  description: Ajuda lloguer persones grans
+  period: 2021-07
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 500
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      existeix_deute_en_el_pagament_del_lloguer: false
+      zona_de_lhabitatge: zona_a
+      demarcacio_de_lhabitatge: tarragona
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        edat: 65
+        ingressos_bruts:
+          2020: 23788
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: barcelona
+  output:
+    HE_02_01_00: [0]
+
+- name: Persona amb lloguer per damunt del limit. No rep l'ajuda
+  description: Ajuda lloguer persones grans
+  period: 2021-07
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 801
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      existeix_deute_en_el_pagament_del_lloguer: false
+      zona_de_lhabitatge: zona_a
+      demarcacio_de_lhabitatge: barcelona_ciutat
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        edat: 65
+        ingressos_bruts:
+          2020: 23788
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: barcelona
+  output:
+    HE_02_01_00: [0]
+
+- name: Persona amb lloguer per damunt del ingressos. No rep l'ajuda
+  description: Ajuda lloguer persones grans
+  period: 2021-07
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 701
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      existeix_deute_en_el_pagament_del_lloguer: false
+      zona_de_lhabitatge: zona_a
+      demarcacio_de_lhabitatge: barcelona_ciutat
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        edat: 65
+        ingressos_bruts:
+          2020: 8400
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: barcelona
+  output:
+    HE_02_01_00: [0]
+
+- name: Persona amb ingressos per damunt del llindar. No rep l'ajuda
+  description: Ajuda lloguer persones grans
+  period: 2021-07
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 600
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      existeix_deute_en_el_pagament_del_lloguer: false
+      zona_de_lhabitatge: zona_a
+      demarcacio_de_lhabitatge: barcelona_ciutat
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        edat: 65
+        ingressos_bruts:
+          2020: 25800
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: barcelona
+  output:
+    HE_02_01_00: [0]
+
+- name: UdC de 2 persones amb ingressos per damunt del llindar. No rep l'ajuda
+  description: Ajuda lloguer persones grans
+  period: 2021-07
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult1, adult2]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1, adult2]
+      import_del_lloguer: 600
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      existeix_deute_en_el_pagament_del_lloguer: false
+      zona_de_lhabitatge: zona_a
+      demarcacio_de_lhabitatge: barcelona_ciutat
+    familia_fins_a_segon_grau:
+      familiars: [adult1, adult2]
+    persones:
+      adult1:
+        edat: 65
+        ingressos_bruts:
+          2020: 20800
         temps_empadronat_habitatge_actual: menys_nou_mesos
         tipus_document_identitat: DNI
         titular_contracte_de_lloguer: true
         municipi_empadronament: barcelona
       adult2:
-        edat: 62
+        edat: 35
         ingressos_bruts:
-          2020: 6348
-        temps_empadronat_habitatge_actual: menys_nou_mesos
-        tipus_document_identitat: DNI
-        municipi_empadronament: barcelona
-        grau_discapacitat: 10
-      menor:
-        edat: 12
-        ingressos_bruts:
-          2020: 0
+          2020: 6000
         temps_empadronat_habitatge_actual: menys_nou_mesos
         tipus_document_identitat: DNI
         titular_contracte_de_lloguer: true
         municipi_empadronament: barcelona
-      menor2:
-        edat: 12
+  output:
+    HE_02_01_00: [0]
+
+- name: UdC de 2 persones amb tots els requisits. Rep l'ajuda
+  description: Ajuda lloguer persones grans
+  period: 2021-07
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult1, adult2]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1, adult2]
+      import_del_lloguer: 600
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      existeix_deute_en_el_pagament_del_lloguer: false
+      zona_de_lhabitatge: zona_a
+      demarcacio_de_lhabitatge: barcelona_ciutat
+    familia_fins_a_segon_grau:
+      familiars: [adult1, adult2]
+    persones:
+      adult1:
+        edat: 65
         ingressos_bruts:
-          2020: 0
+          2020: 20800
         temps_empadronat_habitatge_actual: menys_nou_mesos
         tipus_document_identitat: DNI
         titular_contracte_de_lloguer: true
         municipi_empadronament: barcelona
-      menor3:
-        edat: 12
+      adult2:
+        edat: 35
         ingressos_bruts:
-          2020: 0
+          2020: 5000
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: barcelona
+  output:
+    HE_02_01_00: [1]
+
+- name: Persona amb tots els requisits. Rep l'ajuda
+  description: Ajuda lloguer persones grans
+  period: 2021-07
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 700
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      existeix_deute_en_el_pagament_del_lloguer: false
+      zona_de_lhabitatge: zona_a
+      demarcacio_de_lhabitatge: barcelona_ciutat
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        edat: 65
+        ingressos_bruts:
+          2020: 23788
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: barcelona
+  output:
+    HE_02_01_00: [1]
+
+- name: Persona amb deute de lloguer pero 3 rebuts pagats. Rep l'ajuda
+  description: Ajuda lloguer persones grans
+  period: 2021-07
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 700
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      existeix_deute_en_el_pagament_del_lloguer: true
+      ha_pagat_almenys_3_quotes_del_lloguer: true
+      zona_de_lhabitatge: zona_a
+      demarcacio_de_lhabitatge: barcelona_ciutat
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        edat: 65
+        ingressos_bruts:
+          2020: 23788
         temps_empadronat_habitatge_actual: menys_nou_mesos
         tipus_document_identitat: DNI
         titular_contracte_de_lloguer: true
