--- a/openfisca_barcelona/tests/benefits/HG-077-04.yaml
+++ b/openfisca_barcelona/tests/benefits/HG-077-04.yaml
@@ -1,6 +1,6 @@
-- name: Persona amb tots els requeriments de HG-077-04 reb l'ajuda
+- name: Persona a lleida amb tots els requeriments de HG-077-04 rep l'ajuda
   description: Ajuda lloguer just
-  period: 2017-01
+  period: 2021-10
   absolute_error_margin: false
   input:
     familia:
@@ -19,10 +19,309 @@
       familiars: [adult]
     persones:
       adult:
-        ingressos_bruts_ultims_sis_mesos: 3174
+        ingressos_bruts:
+          2020: 21200
         temps_empadronat_habitatge_actual: menys_nou_mesos
         tipus_document_identitat: DNI
         titular_contracte_de_lloguer: true
         municipi_empadronament: altres
   output:
     HG_077_04: [2000]
+
+- name: UdC de 2 persones a lleida amb tots els requeriments de HG-077-04 rep l'ajuda
+  description: Ajuda lloguer just
+  period: 2021-10
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult1, adult2]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1, adult2]
+      import_del_lloguer: 350
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      zona_de_lhabitatge: zona_a
+      ha_pagat_almenys_3_quotes_del_lloguer: true
+      demarcacio_de_lhabitatge: lleida
+      import_deute_en_el_pagament_del_lloguer: 2000
+    familia_fins_a_segon_grau:
+      familiars: [adult1, adult2]
+    persones:
+      adult1:
+        ingressos_bruts:
+          2020: 21200
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: altres
+      adult2:
+        ingressos_bruts:
+          2020: 5000
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: false
+        municipi_empadronament: altres
+  output:
+    HG_077_04: [2000]
+
+- name: UdC de 2 persones a lleida amb ingressos superiors al llindar NO rep l'ajuda
+  description: Ajuda lloguer just
+  period: 2021-10
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult1, adult2]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1, adult2]
+      import_del_lloguer: 350
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      zona_de_lhabitatge: zona_a
+      ha_pagat_almenys_3_quotes_del_lloguer: true
+      demarcacio_de_lhabitatge: lleida
+      import_deute_en_el_pagament_del_lloguer: 2000
+    familia_fins_a_segon_grau:
+      familiars: [adult1, adult2]
+    persones:
+      adult1:
+        ingressos_bruts:
+          2020: 21200
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: altres
+      adult2:
+        ingressos_bruts:
+          2020: 6200
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: false
+        municipi_empadronament: altres
+  output:
+    HG_077_04: [0]
+
+- name: Persona a lleida amb lloguer superior al llindar NO rep l'ajuda
+  description: Ajuda lloguer just
+  period: 2021-10
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 501
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      zona_de_lhabitatge: zona_a
+      ha_pagat_almenys_3_quotes_del_lloguer: true
+      demarcacio_de_lhabitatge: lleida
+      import_deute_en_el_pagament_del_lloguer: 2000
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        ingressos_bruts:
+          2020: 21200
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: altres
+  output:
+    HG_077_04: [0]
+
+- name: Persona a barcelona ciutat amb tots els requeriments de HG-077-04 rep l'ajuda
+  description: Ajuda lloguer just
+  period: 2021-10
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 799
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      zona_de_lhabitatge: zona_a
+      ha_pagat_almenys_3_quotes_del_lloguer: true
+      demarcacio_de_lhabitatge: barcelona_ciutat
+      import_deute_en_el_pagament_del_lloguer: 2000
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        ingressos_bruts:
+          2020: 21200
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: altres
+  output:
+    HG_077_04: [2000]
+
+- name: Persona a barcelona ciutat amb tots els requeriments de HG-077-04 rep l'ajuda
+  description: Ajuda lloguer just
+  period: 2021-10
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 799
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      zona_de_lhabitatge: zona_a
+      ha_pagat_almenys_3_quotes_del_lloguer: true
+      demarcacio_de_lhabitatge: barcelona_ciutat
+      import_deute_en_el_pagament_del_lloguer: 2000
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        ingressos_bruts:
+          2020: 21200
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: altres
+  output:
+    HG_077_04: [2000]
+
+- name: Persona a barcelona ciutat amb lloguer per damunt del màxim NO rep l'ajuda
+  description: Ajuda lloguer just
+  period: 2021-10
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 801
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      zona_de_lhabitatge: zona_a
+      ha_pagat_almenys_3_quotes_del_lloguer: true
+      demarcacio_de_lhabitatge: barcelona_ciutat
+      import_deute_en_el_pagament_del_lloguer: 2000
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        ingressos_bruts:
+          2020: 21200
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: altres
+  output:
+    HG_077_04: [0]
+
+- name: Persona a barcelona ciutat amb discapacitat rep el maxim de l'ajuda
+  description: Ajuda lloguer just
+  period: 2021-10
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 799
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      zona_de_lhabitatge: zona_a
+      ha_pagat_almenys_3_quotes_del_lloguer: true
+      demarcacio_de_lhabitatge: barcelona_ciutat
+      import_deute_en_el_pagament_del_lloguer: 5000
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        ingressos_bruts:
+          2020: 31800
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: altres
+        grau_discapacitat: 34
+
+  output:
+    HG_077_04: [4500]
+
+- name: Persona a barcelona ciutat amb dependencia rep l'ajuda
+  description: Ajuda lloguer just
+  period: 2021-10
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult]
+      import_del_lloguer: 799
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      zona_de_lhabitatge: zona_a
+      ha_pagat_almenys_3_quotes_del_lloguer: true
+      demarcacio_de_lhabitatge: barcelona_ciutat
+      import_deute_en_el_pagament_del_lloguer: 3000
+    familia_fins_a_segon_grau:
+      familiars: [adult]
+    persones:
+      adult:
+        ingressos_bruts:
+          2020: 31800
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: altres
+        grau_dependencia: 3
+
+  output:
+    HG_077_04: [3000]
+
+- name: UdC de 2 persones a barcelona ciutat amb dependencia rep l'ajuda
+  description: Ajuda lloguer just
+  period: 2021-10
+  absolute_error_margin: false
+  input:
+    familia:
+      altres_persones: [adult1, adult2]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1, adult2]
+      import_del_lloguer: 799
+      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
+      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
+      relacio_de_parentiu_amb_el_propietari: false
+      zona_de_lhabitatge: zona_a
+      ha_pagat_almenys_3_quotes_del_lloguer: true
+      demarcacio_de_lhabitatge: barcelona_ciutat
+      import_deute_en_el_pagament_del_lloguer: 3000
+    familia_fins_a_segon_grau:
+      familiars: [adult1, adult2]
+    persones:
+      adult1:
+        ingressos_bruts:
+          2020: 31800
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: true
+        municipi_empadronament: altres
+        grau_dependencia: 3
+      adult2:
+        ingressos_bruts:
+          2020: 1000
+        temps_empadronat_habitatge_actual: menys_nou_mesos
+        tipus_document_identitat: DNI
+        titular_contracte_de_lloguer: false
+        municipi_empadronament: altres
+        grau_dependencia: 0
+
+  output:
+    HG_077_04: [3000]
